[gd_scene load_steps=6 format=3 uid="uid://dqnaif6rb30s4"]

[ext_resource type="Script" path="res://files/Enemy/enemy.gd" id="1_o747t"]
[ext_resource type="Texture2D" uid="uid://csoctq5algxqq" path="res://art/icon.svg" id="2_5k42o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4ysnw"]
radius = 64.4981

[sub_resource type="CircleShape2D" id="CircleShape2D_8cgji"]
radius = 432.074

[sub_resource type="CircleShape2D" id="CircleShape2D_p7klr"]
radius = 1016.13

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("nav_agent")]
collision_layer = 8
collision_mask = 15
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_o747t")
speed = 250
nav_agent = NodePath("Navigation/NavigationAgent2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.52584, 7.13298e-05, 0.460763, 1)
texture = ExtResource("2_5k42o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4ysnw")

[node name="Navigation" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Navigation"]
debug_enabled = true

[node name="RecalculateTimer" type="Timer" parent="Navigation"]
wait_time = 0.1
autostart = true

[node name="Aggro" type="Node2D" parent="."]

[node name="aggro_range" type="Area2D" parent="Aggro"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aggro/aggro_range"]
shape = SubResource("CircleShape2D_8cgji")

[node name="deaggro_range" type="Area2D" parent="Aggro"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aggro/deaggro_range"]
shape = SubResource("CircleShape2D_p7klr")
debug_color = Color(0.576401, 0.43781, 0.874231, 0.42)

[connection signal="timeout" from="Navigation/RecalculateTimer" to="." method="_on_recalculate_timer_timeout"]
[connection signal="area_entered" from="Aggro/aggro_range" to="." method="_on_aggro_range_area_entered"]
[connection signal="area_exited" from="Aggro/deaggro_range" to="." method="_on_deaggro_range_area_exited"]
